--- a/PROJECT_OVERVIEW.html
+++ b/PROJECT_OVERVIEW.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
             padding: 0;
             box-sizing: border-box;
         }
+
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
             line-height: 1.6;
@@ -18,32 +20,38 @@
             min-height: 100vh;
             padding: 20px;
         }
+
         .container {
             max-width: 1200px;
             margin: 0 auto;
             background: white;
             border-radius: 20px;
             padding: 40px;
-            box-shadow: 0 20px 60px rgba(0,0,0,0.3);
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
         }
+
         .header {
             text-align: center;
             margin-bottom: 40px;
             padding-bottom: 30px;
             border-bottom: 3px solid #00BB77;
         }
+
         .header h1 {
             font-size: 3em;
             color: #00BB77;
             margin-bottom: 10px;
         }
+
         .header .tagline {
             font-size: 1.3em;
             color: #666;
         }
+
         .section {
             margin: 30px 0;
         }
+
         .section h2 {
             color: #00BB77;
             font-size: 1.8em;
@@ -52,28 +60,33 @@
             align-items: center;
             gap: 10px;
         }
+
         .features {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 20px;
             margin: 20px 0;
         }
+
         .feature-card {
             background: #f8f9fa;
             padding: 20px;
             border-radius: 10px;
             border-left: 4px solid #00BB77;
         }
+
         .feature-card h3 {
             color: #00BB77;
             margin-bottom: 10px;
         }
+
         .tech-stack {
             display: flex;
             flex-wrap: wrap;
             gap: 10px;
             margin: 20px 0;
         }
+
         .tech-badge {
             background: #00BB77;
             color: white;
@@ -82,12 +95,14 @@
             font-size: 0.9em;
             font-weight: 600;
         }
+
         .cta-buttons {
             display: flex;
             gap: 15px;
             margin: 30px 0;
             flex-wrap: wrap;
         }
+
         .btn {
             padding: 15px 30px;
             border-radius: 10px;
@@ -97,30 +112,36 @@
             transition: all 0.3s;
             display: inline-block;
         }
+
         .btn-primary {
             background: #00BB77;
             color: white;
         }
+
         .btn-primary:hover {
             background: #009960;
             transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(0,187,119,0.3);
+            box-shadow: 0 5px 15px rgba(0, 187, 119, 0.3);
         }
+
         .btn-secondary {
             background: white;
             color: #00BB77;
             border: 2px solid #00BB77;
         }
+
         .btn-secondary:hover {
             background: #00BB77;
             color: white;
         }
+
         .stats {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
             gap: 20px;
             margin: 30px 0;
         }
+
         .stat-card {
             text-align: center;
             padding: 20px;
@@ -128,15 +149,18 @@
             color: white;
             border-radius: 10px;
         }
+
         .stat-card .number {
             font-size: 2.5em;
             font-weight: bold;
             margin-bottom: 5px;
         }
+
         .stat-card .label {
             font-size: 0.9em;
             opacity: 0.9;
         }
+
         .code-block {
             background: #1e293b;
             color: #e2e8f0;
@@ -147,6 +171,7 @@
             font-size: 0.9em;
             margin: 15px 0;
         }
+
         .footer {
             text-align: center;
             margin-top: 50px;
@@ -154,19 +179,23 @@
             border-top: 2px solid #e0e0e0;
             color: #666;
         }
+
         @media (max-width: 768px) {
             .container {
                 padding: 20px;
             }
+
             .header h1 {
                 font-size: 2em;
             }
+
             .cta-buttons {
                 flex-direction: column;
             }
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <div class="header">
@@ -176,7 +205,8 @@
 
         <div class="section">
             <h2>🎯 Overview</h2>
-            <p>SenteChain is a Web3 mini-application built on <strong>Base (Coinbase's Layer 2)</strong> that allows Ugandans to send, receive, and save stablecoins (USDT) easily — no crypto knowledge required.</p>
+            <p>SenteChain is a Web3 mini-application built on <strong>Base (Coinbase's Layer 2)</strong> that allows
+                Ugandans to send, receive, and save stablecoins (USDT) easily — no crypto knowledge required.</p>
         </div>
 
         <div class="section">
@@ -184,7 +214,8 @@
             <div class="features">
                 <div class="feature-card">
                     <h3>🔐 Walletless Login</h3>
-                    <p>Register with just email or phone number. Wallets are created automatically in the background.</p>
+                    <p>Register with just email or phone number. Wallets are created automatically in the background.
+                    </p>
                 </div>
                 <div class="feature-card">
                     <h3>⚡ Instant Transfers</h3>
@@ -204,7 +235,8 @@
                 </div>
                 <div class="feature-card">
                     <h3>🔒 Secure & Transparent</h3>
-                    <p>All transactions are on-chain and verifiable. Smart contracts audited with OpenZeppelin libraries.</p>
+                    <p>All transactions are on-chain and verifiable. Smart contracts audited with OpenZeppelin
+                        libraries.</p>
                 </div>
             </div>
         </div>
@@ -249,21 +281,21 @@
         <div class="section">
             <h2>🚀 Quick Start</h2>
             <div class="code-block">
-# Clone the repository<br>
-git clone &lt;repo-url&gt;<br>
-cd sentechain-miniapp<br><br>
+                # Clone the repository<br>
+                git clone &lt;repo-url&gt;<br>
+                cd sentechain-miniapp<br><br>
 
-# Run setup script<br>
-./setup.sh<br><br>
+                # Run setup script<br>
+                ./setup.sh<br><br>
 
-# Compile contracts<br>
-npm run compile<br><br>
+                # Compile contracts<br>
+                npm run compile<br><br>
 
-# Deploy to Base Sepolia<br>
-npm run deploy<br><br>
+                # Deploy to Base Sepolia<br>
+                npm run deploy<br><br>
 
-# Start development<br>
-npm run dev
+                # Start development<br>
+                npm run dev
             </div>
             <p style="margin-top: 15px;">Then open <strong>http://localhost:3000</strong> in your browser!</p>
         </div>
@@ -273,7 +305,8 @@ npm run dev
             <div class="features">
                 <div class="feature-card">
                     <h3>smart_contracts/</h3>
-                    <p>Solidity contracts: SenteToken (ERC20) and SenteVault for managing deposits, transfers, and savings.</p>
+                    <p>Solidity contracts: SenteToken (ERC20) and SenteVault for managing deposits, transfers, and
+                        savings.</p>
                 </div>
                 <div class="feature-card">
                     <h3>frontend/</h3>
@@ -331,4 +364,5 @@ npm run dev
         </div>
     </div>
 </body>
+
 </html>
